[gd_scene load_steps=3 format=3 uid="uid://btttrkuv0ikhh"]

[ext_resource type="FontFile" uid="uid://bs5h67nxcmwns" path="res://Fonts/Xolonium-Regular.ttf" id="1_lti8b"]
[ext_resource type="Script" uid="uid://do6b2dih6cj5d" path="res://Scripts/menu.gd" id="1_ouk20"]

[node name="Menu" type="Control" node_paths=PackedStringArray("cannon_level_label", "hull_level_label", "thruster_level_label", "cannon_level_button", "hull_level_button", "thruster_level_button", "cannon_cost_label", "hull_cost_label", "thruster_cost_label", "start_game_button", "reset_stats_button", "quit_button")]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ouk20")
cannon_level_label = NodePath("MarginContainer/ColorRect/VSplitContainer/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer2/MarginContainer2/CannonLevelLabel")
hull_level_label = NodePath("MarginContainer/ColorRect/VSplitContainer/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer2/MarginContainer3/HullLevelLabel")
thruster_level_label = NodePath("MarginContainer/ColorRect/VSplitContainer/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer2/MarginContainer4/ThrusterLevelLabel")
cannon_level_button = NodePath("MarginContainer/ColorRect/VSplitContainer/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer3/MarginContainer2/CannonLevelButton")
hull_level_button = NodePath("MarginContainer/ColorRect/VSplitContainer/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer3/MarginContainer3/HullLevelButton")
thruster_level_button = NodePath("MarginContainer/ColorRect/VSplitContainer/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer3/MarginContainer4/ThrusterLevelButton")
cannon_cost_label = NodePath("MarginContainer/ColorRect/VSplitContainer/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer4/MarginContainer2/CannonCostLabel")
hull_cost_label = NodePath("MarginContainer/ColorRect/VSplitContainer/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer4/MarginContainer3/HullCostLabel")
thruster_cost_label = NodePath("MarginContainer/ColorRect/VSplitContainer/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer4/MarginContainer4/ThrusterCostLabel")
start_game_button = NodePath("MarginContainer/ColorRect/VSplitContainer/HBoxContainer2/MarginContainer/VBoxContainer/MarginContainer/StartGameButton")
reset_stats_button = NodePath("MarginContainer/ColorRect/VSplitContainer/HBoxContainer2/MarginContainer/VBoxContainer/MarginContainer2/ResetStatsButton")
quit_button = NodePath("MarginContainer/ColorRect/VSplitContainer/HBoxContainer2/MarginContainer/VBoxContainer/MarginContainer3/QuitButton")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
custom_minimum_size = Vector2(700, 0)
layout_mode = 2
size_flags_horizontal = 4
color = Color(0.137255, 1, 1, 0.231373)

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/ColorRect"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -330.0
offset_top = -90.5
offset_bottom = 90.5
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 80

[node name="Label" type="Label" parent="MarginContainer/ColorRect/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = " == CONTROLS ==
Movement: WASD/Arrow keys
Main Weapon: Left mouse-click (or hold)
Pause/Unpause: Esc"

[node name="VSplitContainer" type="VSplitContainer" parent="MarginContainer/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/ColorRect/VSplitContainer"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/ColorRect/VSplitContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ColorRect/VSplitContainer/HBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/ColorRect/VSplitContainer/HBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ColorRect/VSplitContainer/HBoxContainer/MarginContainer2/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/ColorRect/VSplitContainer/HBoxContainer/MarginContainer2/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_lti8b")
theme_override_font_sizes/font_size = 24
text = "Asteroid Speed"
horizontal_alignment = 1
vertical_alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/ColorRect/VSplitContainer/HBoxContainer/MarginContainer2/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="AsteroidSpeedLabel" type="Label" parent="MarginContainer/ColorRect/VSplitContainer/HBoxContainer/MarginContainer2/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(63, 27)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_lti8b")
theme_override_font_sizes/font_size = 22
text = "200"
horizontal_alignment = 1

[node name="AsteroidSpeedSlider" type="HSlider" parent="MarginContainer/ColorRect/VSplitContainer/HBoxContainer/MarginContainer2/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 35)
layout_mode = 2
max_value = 1000.0
step = 50.0
value = 200.0
tick_count = 11
ticks_on_borders = true

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/ColorRect/VSplitContainer/HBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ColorRect/VSplitContainer/HBoxContainer/MarginContainer2/VBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/ColorRect/VSplitContainer/HBoxContainer/MarginContainer2/VBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_lti8b")
theme_override_font_sizes/font_size = 24
text = "Asteroid Frequency"
horizontal_alignment = 1
vertical_alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/ColorRect/VSplitContainer/HBoxContainer/MarginContainer2/VBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2

[node name="AsteroidFrequencyLabel" type="Label" parent="MarginContainer/ColorRect/VSplitContainer/HBoxContainer/MarginContainer2/VBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(63, 27)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_lti8b")
theme_override_font_sizes/font_size = 22
text = "0.5"
horizontal_alignment = 1

[node name="AsteroidFrequencySlider" type="HSlider" parent="MarginContainer/ColorRect/VSplitContainer/HBoxContainer/MarginContainer2/VBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 35)
layout_mode = 2
min_value = 0.05
max_value = 1.0
step = 0.05
value = 0.5
tick_count = 20
ticks_on_borders = true

[node name="MarginContainer4" type="MarginContainer" parent="MarginContainer/ColorRect/VSplitContainer/HBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ColorRect/VSplitContainer/HBoxContainer/MarginContainer2/VBoxContainer/MarginContainer4"]
layout_mode = 2

[node name="FreeMoneyButton" type="Button" parent="MarginContainer/ColorRect/VSplitContainer/HBoxContainer/MarginContainer2/VBoxContainer/MarginContainer4/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_lti8b")
theme_override_font_sizes/font_size = 20
text = "Free Money Button"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/ColorRect/VSplitContainer/HBoxContainer"]
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="MarginContainer/ColorRect/VSplitContainer/HBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/ColorRect/VSplitContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ColorRect/VSplitContainer/HBoxContainer/MarginContainer"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/ColorRect/VSplitContainer/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/ColorRect/VSplitContainer/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ColorRect/VSplitContainer/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/ColorRect/VSplitContainer/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5

[node name="ShipLevelLabel" type="Label" parent="MarginContainer/ColorRect/VSplitContainer/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_lti8b")
theme_override_font_sizes/font_size = 24
text = "Ship Level"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/ColorRect/VSplitContainer/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5

[node name="ShipLevelLabel" type="Label" parent="MarginContainer/ColorRect/VSplitContainer/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_lti8b")
theme_override_font_sizes/font_size = 24
text = "Cannons:"

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/ColorRect/VSplitContainer/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5

[node name="ShipLevelLabel" type="Label" parent="MarginContainer/ColorRect/VSplitContainer/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/MarginContainer3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_lti8b")
theme_override_font_sizes/font_size = 24
text = "Hull:"

[node name="MarginContainer4" type="MarginContainer" parent="MarginContainer/ColorRect/VSplitContainer/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5

[node name="ShipLevelLabel" type="Label" parent="MarginContainer/ColorRect/VSplitContainer/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/MarginContainer4"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_lti8b")
theme_override_font_sizes/font_size = 24
text = "Thrusters:"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/ColorRect/VSplitContainer/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/ColorRect/VSplitContainer/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5

[node name="Label" type="Label" parent="MarginContainer/ColorRect/VSplitContainer/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer2/MarginContainer"]
visibility_layer = 0
layout_mode = 2
theme_override_fonts/font = ExtResource("1_lti8b")
theme_override_font_sizes/font_size = 24
text = "0"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/ColorRect/VSplitContainer/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5

[node name="CannonLevelLabel" type="Label" parent="MarginContainer/ColorRect/VSplitContainer/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer2/MarginContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_lti8b")
theme_override_font_sizes/font_size = 24
text = "1"

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/ColorRect/VSplitContainer/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5

[node name="HullLevelLabel" type="Label" parent="MarginContainer/ColorRect/VSplitContainer/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer2/MarginContainer3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_lti8b")
theme_override_font_sizes/font_size = 24
text = "1"

[node name="MarginContainer4" type="MarginContainer" parent="MarginContainer/ColorRect/VSplitContainer/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5

[node name="ThrusterLevelLabel" type="Label" parent="MarginContainer/ColorRect/VSplitContainer/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer2/MarginContainer4"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_lti8b")
theme_override_font_sizes/font_size = 24
text = "1"

[node name="VBoxContainer3" type="VBoxContainer" parent="MarginContainer/ColorRect/VSplitContainer/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/ColorRect/VSplitContainer/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer3"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5

[node name="ShipLevelButton" type="Button" parent="MarginContainer/ColorRect/VSplitContainer/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer3/MarginContainer"]
visibility_layer = 0
layout_mode = 2
size_flags_vertical = 4
disabled = true
text = "Pay up"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/ColorRect/VSplitContainer/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer3"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5

[node name="CannonLevelButton" type="Button" parent="MarginContainer/ColorRect/VSplitContainer/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer3/MarginContainer2"]
layout_mode = 2
size_flags_vertical = 4
text = "Pay up"

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/ColorRect/VSplitContainer/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer3"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5

[node name="HullLevelButton" type="Button" parent="MarginContainer/ColorRect/VSplitContainer/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer3/MarginContainer3"]
layout_mode = 2
size_flags_vertical = 4
text = "Pay up"

[node name="MarginContainer4" type="MarginContainer" parent="MarginContainer/ColorRect/VSplitContainer/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer3"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5

[node name="ThrusterLevelButton" type="Button" parent="MarginContainer/ColorRect/VSplitContainer/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer3/MarginContainer4"]
layout_mode = 2
size_flags_vertical = 4
text = "Pay up"

[node name="VBoxContainer4" type="VBoxContainer" parent="MarginContainer/ColorRect/VSplitContainer/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/ColorRect/VSplitContainer/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer4"]
layout_mode = 2
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5

[node name="Label2" type="Label" parent="MarginContainer/ColorRect/VSplitContainer/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer4/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_fonts/font = ExtResource("1_lti8b")
theme_override_font_sizes/font_size = 24
text = "Cost"
horizontal_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/ColorRect/VSplitContainer/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer4"]
custom_minimum_size = Vector2(102, 40)
layout_mode = 2
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5

[node name="CannonCostLabel" type="Label" parent="MarginContainer/ColorRect/VSplitContainer/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer4/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("1_lti8b")
theme_override_font_sizes/font_size = 24
text = "100000"
horizontal_alignment = 2

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/ColorRect/VSplitContainer/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer4"]
custom_minimum_size = Vector2(102, 40)
layout_mode = 2
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5

[node name="HullCostLabel" type="Label" parent="MarginContainer/ColorRect/VSplitContainer/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer4/MarginContainer3"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("1_lti8b")
theme_override_font_sizes/font_size = 24
text = "100000"
horizontal_alignment = 2

[node name="MarginContainer4" type="MarginContainer" parent="MarginContainer/ColorRect/VSplitContainer/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer4"]
custom_minimum_size = Vector2(102, 40)
layout_mode = 2
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5

[node name="ThrusterCostLabel" type="Label" parent="MarginContainer/ColorRect/VSplitContainer/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer4/MarginContainer4"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("1_lti8b")
theme_override_font_sizes/font_size = 24
text = "100000"
horizontal_alignment = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/ColorRect/VSplitContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/ColorRect/VSplitContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ColorRect/VSplitContainer/HBoxContainer2/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/ColorRect/VSplitContainer/HBoxContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 10

[node name="StartGameButton" type="Button" parent="MarginContainer/ColorRect/VSplitContainer/HBoxContainer2/MarginContainer/VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(250, 40)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_lti8b")
theme_override_font_sizes/font_size = 30
text = "Start Game"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/ColorRect/VSplitContainer/HBoxContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 10

[node name="ResetStatsButton" type="Button" parent="MarginContainer/ColorRect/VSplitContainer/HBoxContainer2/MarginContainer/VBoxContainer/MarginContainer2"]
custom_minimum_size = Vector2(250, 40)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_lti8b")
theme_override_font_sizes/font_size = 30
text = "Reset Stats"

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/ColorRect/VSplitContainer/HBoxContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 10

[node name="QuitButton" type="Button" parent="MarginContainer/ColorRect/VSplitContainer/HBoxContainer2/MarginContainer/VBoxContainer/MarginContainer3"]
custom_minimum_size = Vector2(250, 40)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_lti8b")
theme_override_font_sizes/font_size = 30
text = "Quit"

[connection signal="drag_ended" from="MarginContainer/ColorRect/VSplitContainer/HBoxContainer/MarginContainer2/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/AsteroidSpeedSlider" to="." method="_on_asteroid_speed_slider_drag_ended"]
[connection signal="value_changed" from="MarginContainer/ColorRect/VSplitContainer/HBoxContainer/MarginContainer2/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/AsteroidSpeedSlider" to="." method="_on_asteroid_speed_slider_value_changed"]
[connection signal="drag_ended" from="MarginContainer/ColorRect/VSplitContainer/HBoxContainer/MarginContainer2/VBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer/AsteroidFrequencySlider" to="." method="_on_asteroid_frequency_slider_drag_ended"]
[connection signal="value_changed" from="MarginContainer/ColorRect/VSplitContainer/HBoxContainer/MarginContainer2/VBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer/AsteroidFrequencySlider" to="." method="_on_asteroid_frequency_slider_value_changed"]
[connection signal="pressed" from="MarginContainer/ColorRect/VSplitContainer/HBoxContainer/MarginContainer2/VBoxContainer/MarginContainer4/VBoxContainer/FreeMoneyButton" to="." method="_on_free_money_button_pressed"]
[connection signal="pressed" from="MarginContainer/ColorRect/VSplitContainer/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer3/MarginContainer2/CannonLevelButton" to="." method="_on_cannon_level_button_pressed"]
[connection signal="pressed" from="MarginContainer/ColorRect/VSplitContainer/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer3/MarginContainer3/HullLevelButton" to="." method="_on_hull_level_button_pressed"]
[connection signal="pressed" from="MarginContainer/ColorRect/VSplitContainer/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer3/MarginContainer4/ThrusterLevelButton" to="." method="_on_thruster_level_button_pressed"]
[connection signal="pressed" from="MarginContainer/ColorRect/VSplitContainer/HBoxContainer2/MarginContainer/VBoxContainer/MarginContainer/StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="MarginContainer/ColorRect/VSplitContainer/HBoxContainer2/MarginContainer/VBoxContainer/MarginContainer2/ResetStatsButton" to="." method="_on_reset_stats_button_pressed"]
[connection signal="pressed" from="MarginContainer/ColorRect/VSplitContainer/HBoxContainer2/MarginContainer/VBoxContainer/MarginContainer3/QuitButton" to="." method="_on_quit_button_pressed"]
